force-app/main/default/objects/Site__c/Site__c.object-meta.xml
<CustomObject>
    <description>Custom object to house Site information, opening hours managed within SF.</description>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>