force-app/main/default/objects/Site__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address field to be exposed onto the Grower&apos;s Portal, managed from within Salesforce</description>
    <label>Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>