force-app/main/default/objects/Site__c/fields/BHC__c.field-meta.xml
<CustomField>
    <fullName>BHC__c</fullName>
    <description>Picklist field to indicate which organisation owns the Site, coming in from AGBOSS.</description>
    <label>BHC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manildra</fullName>
            </value>
            <value>
                <fullName>Graincorp</fullName>
            </value>
            <value>
                <fullName>AWB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>