force-app/main/default/objects/Site__c/fields/Site_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_External_ID__c</fullName>
    <description>External ID field for Site, coming in from AGBOSS.</description>
    <label>Site External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>