force-app/main/default/objects/Site__c/fields/Site_Manager__c.field-meta.xml
<CustomField>
    <fullName>Site_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User to represent the Site Manager</description>
    <label>Site Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>