force-app/main/default/objects/Site__c/fields/Site_Manager_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Site_Manager_Mobile__c</fullName>
    <description>Phone field to represent the Site Manager&apos;s Mobile</description>
    <label>Site Manager Mobile</label>
    <type>Phone</type>
</CustomField>