force-app/main/default/objects/Site__c/fields/Site_Related_Alert__c.field-meta.xml
<CustomField>
    <fullName>Site_Related_Alert__c</fullName>
    <description>Bin Grade/Site Manager will use this field to display any alert or message on the &quot;Operation Hours&quot; page on Grower&apos;s Portal</description>
    <label>Site Related Alert</label>
    <length>80</length>
    <type>Text</type>
</CustomField>